# blog-dbt-mimesis

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: run_data_pipeline_tests.yml
data_generator/: __main__.py  generator.py  main.py  models.py
dbt_mimesis_example/: .gitignore  dbt_project.yml  generator.py  profiles.yml
dbt_mimesis_example/models/: airplanes.sql  cities.sql  flights.sql  origin_city.sql  raw_flights.sql  schema.yml
dbt_mimesis_example/seeds/: schema.yml
