[tool.poetry]
name = "dbt-mimesis"
version = "0.1.0"
description = "Example rerpo for mimesis testing with dbt"
authors = ["Marvin Klossek"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "^1.1.3"
mimesis = "^18.0.0"
dbt-core = "^1.8.8"
dbt-duckdb = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
