[tool.poetry]
name = "dbt-mimesis"
version = "0.1.0"
description = "Example rerpo for mimesis testing with dbt"
authors = ["Marvin Klossek"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "^1.1.3"
mimesis = "^18.0.0"
dbt-core = "^1.8.8"
dbt-duckdb = "^1.9.0"
click = "^8.1.7"
pydantic = "^2.9.2"
pydantic-yaml = "^1.4.0"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
